7068051: SIGSEGV in PhaseIdealLoop::build_loop_late_post

Removed predicate cloning from loop peeling optimization and from split fall-in paths.

Reviewed-by: never